* Fix TR2 small spider which was not doing sounds on attack and death.
* Fix TR3 shiva not taking explosive damage (should still block with the sword).
* Fix TR3 puna boss not blocking projectiles (grenade, rocket, harpoon, bolt) with the shield.
* Fix TR3 puna boss and TR5 roman statue taking fire when shoot by explosive ammo.
* Add TR3 Sophia Leigh with following OCBs:	
	- 1 – Normal mode. Sophia behaves like a regular enemy.
	- 2 – Tower Mode. Behaviour matched from Tomb Raider III. Invincible unless triggered to be killed.
	- 6 – Tower Mode with Volumes. Same as Tower Mode but Sophia’s ascent can be controlled using volumes in Tomb Editor.
* Improved behaviour of TR3 tiger and TR5 lion.
* Fix TR4 baddy1 who was doing the bullets dodge ability when Lara aimed at him.
* Add Airlock_Switch object. (Valves to open doors, located in submarine levels of TR5).
* Fix Valve switch (OCB 5) that was unable to untrigger objects.
* Fix Valve and Wall Hole switches (OCB 5 nad 6) as they weren't working with timed triggers.
* Polished the position that Lara uses to interact with switches and crowbar doors.
* Add OCB 7 - Custom Lua switch (Usage of ItemFlags in lua required).
	- ItemFlags[4] = on Animation (example: MySwitch:SetItemFlags(number ID of On Animation, 4)
	- ItemFlags[5] = off Animation (example: MySwitch:SetItemFlags(number ID of Off Animation, 5)
	- ItemFlags[6] = Distance to use the switch. (example: MySwitch:SetItemFlags(Distance Position, 6)
* Implemented effect to squash and stretch water bubbles.
* Implement a new pickup display inspired by OpenLara.

Lua API Changes
* Fix Camera:SetPosition not updating camera position when it is played simultaneously.
* Add Moveable:GetAirborne and Moveable:SetAirborne.
* Add Moveable:GetLocationAI and Moveable:SetLocationAI.

Version 1.0.6
=============

* Fix major pathfinding bug which could have caused lots of issues with enemy behaviour.
* Fix potential random crashes due to incorrect rendering behaviour.